# DAPLink_NUC120RE3DN

./: CMakeLists.txt  DAP_config.h  IO_Config.h  board_config.h  gcc_arm.ld  get_serial.c  get_serial.h  main.c  nuc120_usb.c  startup_NUC100Series.S  tusb_config.h  tx_initialize_low_level.S  usb_descriptors.c
DAP/Include/: DAP.h
bsp/CMSIS/Include/: core_cm0.h
bsp/Device/NUC100/Include/: NUC100Series.h
bsp/StdDrv/inc/: uart.h
cmake/: arm-none-eabi.cmake  daplink.cmake  nuc120bsp.cmake  tinyusb.cmake
docs/: NuLinnkMe.md
tinyusb/: tusb_option.h
tinyusb/osal/: osal.h  osal_threadx.h
utils/: usb_desc.yaml  usb_gen.py
